tests/snapshots/parse_file__era.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/era.bend
---
(Main) = *
