tests/snapshots/parse_file__fold_missing_case.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/fold_missing_case.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/parse_file/fold_missing_case.bend :
[1m- expected:[0m 'case'
[1m- detected:[0m end of input
[0m  4 | [4m[31m [0m
