tests/snapshots/parse_file__fun_def_name.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/fun_def_name.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/parse_file/fun_def_name.bend[0m[1m :[0m
Redefinition of builtin (constructor) 'List/Cons'.
[0m  4 |       aux2 [4m[31m(List/Cons head tail) = (+ head (aux tail))[0m
