tests/snapshots/parse_file__if_missing_else.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/if_missing_else.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/parse_file/if_missing_else.bend[0m[1m :[0m
[1m- expected:[0m 'else' or 'elif'
[1m- detected:[0m end of input
[0m  5 | [4m[31m [0m
