tests/snapshots/parse_file__missing_paren.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/missing_paren.hvm
---
At tests/golden_tests/parse_file/missing_paren.hvm:1:7: Missing Parenthesis around rule body
[0m  1 | main = [4m[31m* *[0m
