tests/snapshots/parse_file__missing_paren_then_adt.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/parse_file/missing_paren_then_adt.hvm
---
At line 1: Missing Parenthesis around rule `main` body
